# pixel-renderer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/setup-pango-cairo/: action.yaml
.github/workflows/: docker-build.yaml  lint.yaml  release.yaml  test.yaml
demos/: README.md  create_font_download_configs.py
demos/font_download/: demo_create_font_download_configs.py
demos/pixel_renderer/: demo_render_text_image.py
examples/font_download/: download_configs.py
examples/pixel_renderer/: benchmark.py  create_sample_images.py  long_text_benchmark.py  pixel_processor.py  render_text_image.py  samples.tsv
font_configurator/: font_configurator.py  fontconfig_managers.py  fontconfig_templates.py
font_configurator/test_assets/fontconfigs/: invalid_dummy__invalid_xml_v1.conf  invalid_dummy__invalid_xml_v2.conf  valid_darwin__v1.conf  valid_dummy__multiple_font_dirs.conf  valid_dummy__no_font_dir.conf  valid_dummy__no_font_dir_no_description.conf  valid_dummy__single_font_dir.conf  valid_linux__v2.conf
font_configurator/test_font/: conftest.py  test_fontconfig_managers.py
font_configurator/test_font_intergration/: test_font_configurator_only_minimal.py
font_download/: README.md  __init__.py  config.py  default_fonts.py  download_fonts.py  fonts.py  reproducible_font_download.py  tools.py
font_download/default_fonts/: noto_sans.py
font_download/example_fonts/: honk.py  noto_sans.py
font_download/reproducible_fonts/: honk.py  noto_sans.py
font_download/test_font_download/: conftest.py  test_font_download.py  test_integration.py  test_tools.py
pixel_renderer/: __init__.py  processor.py  renderer.py
tests/: test_renderer.py
tests/font_configurator/test_assets/fontconfigs/: invalid_dummy__invalid_root_v1.conf  valid_darwin__v2.conf  valid_dummy__no_description.conf  valid_dummy__v1.conf  valid_linux__v1.conf
tests/font_configurator/test_font/: test_font_configurator.py  test_fontconfig_managers.py
tests/font_configurator/test_font_intergration/: conftest.py  test_font_configurator_only_minimal.py
tests/font_download/: conftest.py  test_config.py  test_download_fonts.py  test_fonts.py
tests/pixel_renderer/: test_backward_compatibility.py  test_no_deadlock.py  test_processor.py  test_renderer.py
