[project]
name = "pixel-renderer"
description = "Text renderer for PIXEL models"
version = "0.0.1"
authors = [
    { name = "Ilker Kesen", email = "ilkerksn@gmail.com" },
    { name = "Amit Moryossef", email = "amit@sign.mt" },
]
readme = "README.md"
dependencies = [
    "numpy",
    "Pillow", # To create Images from arrays
    "utf8-tokenizer", # For visualization of control tokens / whitespace
    "signwriting @ git+https://github.com/sign-language-processing/signwriting", # To render SignWriting images
    "lxml", # for XML parsing in fontconfig TODO remove once https://github.com/sign/WeLT/issues/24
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-xdist", # For parallel test execution
]


[tool.setuptools]
packages = [
    "pixel_renderer",
    "font_configurator", # TODO: extract to separate package https://github.com/sign/WeLT/issues/24
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C90", # mccabe complexity
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "PT", # flake8-pytest-style
    "W605", # invalid escape sequence
    "BLE", # flake8-blind-except
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
    "pixel_renderer",
    "font_configurator",
]
